--- a/styles/librarySheet.css
+++ b/styles/librarySheet.css
@@ -2,8 +2,25 @@
     overflow: auto;
 }
 
-::-webkit-scrollbar {
+.scroll-slide::-webkit-scrollbar {
     display: none;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px ;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 .cat-btn {
