--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -1,3 +1,24 @@
-.selectAll {
-  background-color: #fe1818;
+.radioButton {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+.customRadio input {
+  display: none;
+}
+.radioBtn {
+  margin: 10px;
+  width: 180px;
+  height: 200px;
+  border: 3px solid transparent;
+  display: inline-block;
+  border-radius: 10px;
+  position: relative;
+  text-align: center;
+  box-shadow: 0 0 20px #c3c3c3;
+  cursor: pointer;
+}
+#icon {
+  color: #ffffff;
+  background-color: #8373e6;
 }
