--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -1,24 +1,84 @@
-.radioButton {
-  width: 100%;
-  margin: 0 auto;
-  text-align: center;
+.container {
+  padding-top: 10%;
 }
-.customRadio input {
-  display: none;
-}
-.radioBtn {
-  margin: 10px;
-  width: 180px;
-  height: 200px;
-  border: 3px solid transparent;
-  display: inline-block;
-  border-radius: 10px;
+.inputGroup {
+  background-color: #fff;
+  display: block;
+  margin: 10px 0;
   position: relative;
-  text-align: center;
-  box-shadow: 0 0 20px #c3c3c3;
-  cursor: pointer;
-}
-#icon {
-  color: #ffffff;
-  background-color: #8373e6;
+
+  label {
+    padding: 12px 80px;
+    width: 100%;
+    display: block;
+    text-align: left;
+    color: #3c454c;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+    transition: color 200ms ease-in;
+    overflow: hidden;
+
+    &:before {
+      width: 32px;
+      height: 32px;
+      content: "";
+      border: 2px solid #d1d7dc;
+      background-color: #fff;
+      background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+      background-repeat: no-repeat;
+      background-position: 2px 3px;
+      border-radius: 50%;
+      z-index: 2;
+      position: absolute;
+      left: 30px;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+      transition: all 200ms ease-in;
+    }
+
+    &:after {
+      width: 10px;
+      height: 10px;
+      border-radius: 50%;
+      content: "";
+      background-color: #cd2424;
+      position: absolute;
+      right: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%) scale3d(1, 1, 1);
+      transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+      opacity: 0;
+      z-index: -1;
+    }
+
+  }
+  
+  input:checked ~ label {
+    color: #fff;
+
+    &:before {
+      background-color: #cd2424;
+      border-color: #ffffff;
+    }
+
+    &:after {
+      transform: translate(-50%, -50%) scale3d(56, 56, 1);
+      opacity: 1;
+    }
+  }
+
+  input {
+    width: 32px;
+    height: 32px;
+    order: 1;
+    z-index: 2;
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    transform: translateY(50%);
+    cursor: pointer;
+    visibility: hidden;
+  }
 }
