--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -1,10 +1,7 @@
-.container {
-  padding-top: 10%;
-}
 .inputGroup {
-  background-color: #fff;
+  background-color: #f7f7f7;
   display: block;
-  margin: 10px 0;
+  margin: 50px 0 20px 0;
   position: relative;
 
   label {
@@ -52,9 +49,8 @@
       opacity: 0;
       z-index: -1;
     }
-
   }
-  
+
   input:checked ~ label {
     color: #fff;
 
@@ -81,4 +77,123 @@
     cursor: pointer;
     visibility: hidden;
   }
+}
+
+.cardGroup {
+  height: 80%;
+  overflow-y: scroll;
+  background-color: #f7f7f7;
+  display: block;
+  margin: 20px 0 20px 0;
+  position: relative;
+}
+
+.card {
+  background-color: #f7f7f7;
+  display: block;
+  margin: 10px 0 20px 20px;
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+
+  img {
+    -khtml-user-select: none;
+    -o-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+    margin: 10px 0 10px 80px;
+    
+  }
+
+  .cardDetail {
+    margin: 20px 20px 60px 20px;
+  }
+
+  .bDetail {
+    padding: 20px 10px;
+    width: 100%;
+    display: block;
+    text-align: left;
+    color: #3c454c;
+    position: absolute;
+    top: 20%;
+    // cursor: pointer;
+    z-index: 2;
+    transition: color 200ms ease-in;
+    overflow: hidden;
+
+    &:before {
+      width: 32px;
+      height: 32px;
+      content: "";
+      border: 2px solid #d1d7dc;
+      background-color: #fff;
+      background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+      background-repeat: no-repeat;
+      background-position: 2px 3px;
+      border-radius: 50%;
+      z-index: 3;
+      position: absolute;
+      left: 30px;
+      transform: translateY(-50%);
+      cursor: pointer;
+      transition: all 200ms ease-in;
+    }
+  }
+
+  input:checked ~ .bDetail {
+    &:before {
+      background-color: #cd2424;
+      border-color: #ffffff;
+    }
+  }
+
+  .check {
+    width: 32px;
+    height: 32px;
+    order: 1;
+    z-index: 2;
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    transform: translateY(50%);
+    cursor: pointer;
+    visibility: hidden;
+  }
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.checkout {
+  padding-top: 50px;
+}
+.detail {
+  padding: 30px;
+}
+.count {
+  position: absolute;
+  top: 60%;
+  left: 40%;
+}
+#icon {
+  font-size: 30px;
+  margin-top: 5px;
+  color: #FE1818;
+}
+#iconbin {
+  font-size: 20px;
+  margin: 10px;
+  color: #707070;
+}
+#iconbin:hover {
+  font-size: 20px;
+  margin: 10px;
+  color: #000000;
+}
+#icon:hover {
+  color: #AF0000;
+}
+#nBook {
+  padding-top: 10px;
 }
