--- a/styles/cart.module.scss
+++ b/styles/cart.module.scss
@@ -12,7 +12,7 @@
     color: #3c454c;
     cursor: pointer;
     position: relative;
-    z-index: 2;
+    z-index: 1;
     transition: color 200ms ease-in;
     overflow: hidden;
 
@@ -80,18 +80,19 @@
 }
 
 .cardGroup {
-  height: 80%;
+  height: 57%;
   overflow-y: scroll;
+  overflow-x: hidden;
   background-color: #f7f7f7;
   display: block;
-  margin: 20px 0 20px 0;
-  position: relative;
+  // margin: 20px 0 20px 0;
+  // position: relative;
 }
 
 .card {
   background-color: #f7f7f7;
   display: block;
-  margin: 10px 0 20px 20px;
+  margin: 10px 0 20px 7px;
   position: relative;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
@@ -119,7 +120,7 @@
     position: absolute;
     top: 20%;
     // cursor: pointer;
-    z-index: 2;
+    z-index: 1;
     transition: color 200ms ease-in;
     overflow: hidden;
 
