--- a/styles/profileSheet.css
+++ b/styles/profileSheet.css
@@ -1,3 +1,4 @@
 .actived, .optionUser:hover {
-    filter: opacity(.6) drop-shadow(0 0 0 #ff2f00);
+    opacity: 0.6;
+    filter: drop-shadow(0 0 0 #ff2f00);
 }
